Moved turador logic to static library so we can test it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ project(${DOMUM_PROJECT_NAME})
 enable_testing()
 
 ###############################################################################
+## 1st party libraries.
+###############################################################################
+add_subdirectory("libturador")
+
+###############################################################################
 ## Executables.
 ###############################################################################
 add_subdirectory("turador")
