Added another test and improvements to code

--- a/libturador/CMakeLists.txt
+++ b/libturador/CMakeLists.txt
@@ -29,6 +29,7 @@ set(LIBTURADOR_SRC_FILES
     "${LIBTURADOR_INCLUDE_DIR}/tura/harborfactory.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/harborfactoryinterface.h"
     "${LIBTURADOR_INCLUDE_DIR}/commandhandler.hpp"
+    "${LIBTURADOR_INCLUDE_DIR}/noncopyable.h"
     "${LIBTURADOR_INCLUDE_DIR}/csvparser.hpp"
     "${LIBTURADOR_SRC_DIR}/tura/error.cpp"
     "${LIBTURADOR_SRC_DIR}/tura/game.cpp"
