Volledige implementatie en testing van inkopen/verkopen goederen

--- a/libturador/CMakeLists.txt
+++ b/libturador/CMakeLists.txt
@@ -21,6 +21,8 @@ set(LIBTURADOR_SRC_FILES
     "${LIBTURADOR_INCLUDE_DIR}/tura/models/harborcargo.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/models/harborcargostats.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/models/harborstats.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/models/ship.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/models/shiptype.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/error.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/game.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/gamebuilder.hpp"
@@ -29,6 +31,7 @@ set(LIBTURADOR_SRC_FILES
     "${LIBTURADOR_INCLUDE_DIR}/tura/harborbuilder.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/tura/harborfactory.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/harborfactoryinterface.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/shipbuilder.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/commandmediator.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/noncopyable.h"
     "${LIBTURADOR_INCLUDE_DIR}/csvparser.hpp"
