--- a/libturador/CMakeLists.txt
+++ b/libturador/CMakeLists.txt
@@ -12,6 +12,15 @@ set(LIBTURADOR_SRC_DIR "${LIBTURADOR_DIR}/src")
 set(LIBTURADOR_INCLUDE_DIR "${LIBTURADOR_DIR}/include")
 
 set(LIBTURADOR_SRC_FILES
+    "${LIBTURADOR_INCLUDE_DIR}/tura/dal/repositories/harborgenerationparametersfilerepository.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/dal/repositories/harborgenerationparametersrepositoryinterface.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/dal/repositories/shiptypefilerepository.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/dal/repositories/shiptyperepositoryinterface.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commandhandlers/purchasecargocommandhandler.hpp"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commandhandlers/startgamecommandhandler.hpp"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/commandbase.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/purchasecargocommand.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/startgamecommand.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/cargo.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/gamestate.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/harbor.h"
@@ -19,14 +28,9 @@ set(LIBTURADOR_SRC_FILES
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/harborcargogenerationparameters.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/harborgenerationparameters.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/ship.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/shipsizeclass.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/shiptype.h"
-    "${LIBTURADOR_INCLUDE_DIR}/tura/dal/repositories/harborgenerationparametersfilerepository.h"
-    "${LIBTURADOR_INCLUDE_DIR}/tura/dal/repositories/harborgenerationparametersrepositoryinterface.h"
-    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commandhandlers/purchasecargocommandhandler.hpp"
-    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commandhandlers/startgamecommandhandler.hpp"
-    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/commandbase.h"
-    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/purchasecargocommand.h"
-    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/startgamecommand.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/shipweightclass.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commandmediator.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/constants.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/game.h"
@@ -38,6 +42,7 @@ set(LIBTURADOR_SRC_FILES
     "${LIBTURADOR_INCLUDE_DIR}/tura/error.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/harborbuilder.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/tura/shipbuilder.hpp"
+    "${LIBTURADOR_SRC_DIR}/tura/dal/repositories/shiptypefilerepository.cpp"
     "${LIBTURADOR_SRC_DIR}/tura/dal/repositories/harborgenerationparametersfilerepository.cpp"
     "${LIBTURADOR_SRC_DIR}/tura/domain/game.cpp"
     "${LIBTURADOR_SRC_DIR}/tura/error.cpp")
@@ -47,6 +52,7 @@ set(LIBTURADOR_TEST_SRC_FILES
     "${LIBTURADOR_TESTS_SRC_DIR}/helpers/testhelpers.h"
     "${LIBTURADOR_TESTS_SRC_DIR}/mocks/harborgeneratormock.h"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/dal/repositories/harborgenerationparametersfilerepositoryunittests.cpp"
+    "${LIBTURADOR_TESTS_SRC_DIR}/tura/dal/repositories/shiptypefilerepositoryunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/domain/commandhandlers/purchasecargocommandhandlerunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/domain/commandhandlers/startgamecommandhandlerunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/service/gameclientunittests.cpp"
