Added ship generation and a char array helper class because fuck char arrays

--- a/libturador/CMakeLists.txt
+++ b/libturador/CMakeLists.txt
@@ -36,6 +36,10 @@ set(LIBTURADOR_SRC_FILES
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/game.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/gamehelpers.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/harborgenerator.hpp"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/harborgeneratorinterface.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/shipgenerator.hpp"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/shipgeneratorinterface.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/helpers/chararray.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/tura/helpers/csvparser.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/tura/helpers/noncopyable.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/service/gameclient.h"
@@ -51,6 +55,8 @@ set(LIBTURADOR_TESTS_SRC_DIR "${LIBTURADOR_DIR}/tests")
 set(LIBTURADOR_TEST_SRC_FILES
     "${LIBTURADOR_TESTS_SRC_DIR}/helpers/testhelpers.h"
     "${LIBTURADOR_TESTS_SRC_DIR}/mocks/harborgeneratormock.h"
+    "${LIBTURADOR_TESTS_SRC_DIR}/mocks/shipgeneratormock.h"
+    "${LIBTURADOR_TESTS_SRC_DIR}/mocks/shiptyperepositorymock.h"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/dal/repositories/harborgenerationparametersfilerepositoryunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/dal/repositories/shiptypefilerepositoryunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/domain/commandhandlers/purchasecargocommandhandlerunittests.cpp"
