Added sell cargo command

--- a/libturador/CMakeLists.txt
+++ b/libturador/CMakeLists.txt
@@ -17,9 +17,11 @@ set(LIBTURADOR_SRC_FILES
     "${LIBTURADOR_INCLUDE_DIR}/tura/dal/repositories/shiptypefilerepository.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/dal/repositories/shiptyperepositoryinterface.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commandhandlers/purchasecargocommandhandler.hpp"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commandhandlers/sellcargocommandhandler.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commandhandlers/startgamecommandhandler.hpp"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/commandbase.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/purchasecargocommand.h"
+    "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/sellcargocommand.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/commands/startgamecommand.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/cargo.h"
     "${LIBTURADOR_INCLUDE_DIR}/tura/domain/models/gamestate.h"
@@ -60,6 +62,7 @@ set(LIBTURADOR_TEST_SRC_FILES
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/dal/repositories/harborgenerationparametersfilerepositoryunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/dal/repositories/shiptypefilerepositoryunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/domain/commandhandlers/purchasecargocommandhandlerunittests.cpp"
+    "${LIBTURADOR_TESTS_SRC_DIR}/tura/domain/commandhandlers/sellcargocommandhandlerunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/domain/commandhandlers/startgamecommandhandlerunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/tura/service/gameclientunittests.cpp"
     "${LIBTURADOR_TESTS_SRC_DIR}/main.cpp")
