--- a/turador/CMakeLists.txt
+++ b/turador/CMakeLists.txt
@@ -8,10 +8,10 @@ set(TURADOR_BINARY_NAME "turador")
 
 set(TURADOR_DIR ${CMAKE_CURRENT_LIST_DIR})
 set(TURADOR_SRC_DIR "${TURADOR_DIR}/src")
+set(TURADOR_INCLUDE_DIR "${TURADOR_DIR}/src")
 
 set(TURADOR_SRC_FILES
-    "${TURADOR_SRC_DIR}/main.cpp"
-    "${TURADOR_SRC_DIR}/main.h")
+    "${TURADOR_SRC_DIR}/main.cpp")
 
 
 ###############################################################################
@@ -21,6 +21,9 @@ project(${TURADOR_PROJECT_NAME})
 
 add_executable(${TURADOR_BINARY_NAME}
     ${TURADOR_SRC_FILES})
+
+target_include_directories(${TURADOR_BINARY_NAME}
+    PRIVATE ${TURADOR_INCLUDE_DIR})
 
 # Copy assets.
 # file(GLOB assets "assets/*")
